# DistributedDB

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
include/storage/: IDataStore.h
include/storage/impl/: BTree.h  BinaryTree.h
src/: main.cpp
src/storage/: BTree.cpp  BinaryTree.cpp
tst/storage/: IDataStoreTestSuite.h
tst/storage/impl/: BinaryTreeTests.cpp
